.provarCaches/00D410000011HE0EAM/objects/rstk__contextmenu__c.object
<CustomObject>
    <description>contextmenu__c</description>
    <fields>
        <fullName>rstk__api__c</fullName>
        <formula>$Api.Partner_Server_URL_80</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>API</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__controller__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Controller</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__new_window__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Display in New Window</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__public__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__title__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Title</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__url__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quick_Menus</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Context Menu</label>
    <listViews>
        <fullName>Context_Menu</fullName>
        <columns>NAME</columns>
        <columns>rstk__title__c</columns>
        <columns>rstk__url__c</columns>
        <columns>rstk__new_window__c</columns>
        <columns>rstk__api__c</columns>
        <columns>rstk__public__c</columns>
        <columns>rstk__user__c</columns>
        <columns>rstk__controller__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Context Menu</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Context Menus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>